--- a/.distignore
+++ b/.distignore
@@ -7,6 +7,7 @@
 *.zip
 /.git
 /.distignore
+/.wordpress-org
 /sdk/composer.lock
 /sdk/vendor/obs/esdk-obs-php/release
 /sdk/vendor/obs/esdk-obs-php/examples
